--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "name": "alexsoft/wroclaw-lunch",
+    "description": "",
+    "keywords": [],
     "license": "MIT",
     "type": "project",
     "require": {
